fix: Correct error with dropdown z-index

--- a/src/components/dropdown/Dropdown.module.scss
+++ b/src/components/dropdown/Dropdown.module.scss
@@ -28,7 +28,9 @@
   width: 250px;
   box-sizing: border-box;
   padding: 20px 30px 20px 20px;
+  background-color: map.get($background_color, popup);
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 4px 32px rgba(0, 0, 0, 0.16);
+  z-index: 105;
 
   @media screen and (max-width: 1200px) {
     right: 0;
